[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/dynamic_font_md.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/pause_menu/pause_menu.gd" type="Script" id=2]




[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.184314, 0.184314, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Container"]
anchor_top = 0.00192421
anchor_right = 1.0
anchor_bottom = 1.00192
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="Label" parent="Control/Container/VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0

[node name="Pause" type="Label" parent="Control/Container/VBoxContainer"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Pause"
align = 1
valign = 1

[node name="Margin3" type="Label" parent="Control/Container/VBoxContainer"]
margin_top = 24.0
margin_right = 600.0
margin_bottom = 38.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Container/VBoxContainer"]
margin_top = 42.0
margin_right = 600.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 0
alignment = 1

[node name="RestartGame" type="Button" parent="Control/Container/VBoxContainer/HBoxContainer2"]
margin_left = 250.0
margin_right = 349.0
margin_bottom = 20.0
text = "Restart Game"

[node name="Margin4" type="Label" parent="Control/Container/VBoxContainer"]
margin_top = 66.0
margin_right = 600.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Container/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ExitGame" type="Button" parent="Control/Container/VBoxContainer/HBoxContainer"]
margin_left = 261.0
margin_right = 338.0
margin_bottom = 20.0
text = "Exit Game"
[connection signal="pressed" from="Control/Container/VBoxContainer/HBoxContainer2/RestartGame" to="." method="_on_RestartGame_pressed"]
[connection signal="pressed" from="Control/Container/VBoxContainer/HBoxContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
